# Toy

./: CMakeLists.txt  Calculator.cpp  Calculator.hh  README.md  main.cpp
tests/: Calculator_test.cpp
